css/main.css
/*! This is spaghetti, refactor and add classes/divs liberally */
@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');

* {
    padding: 0;
    margin: 0;
    text-decoration: none;
    list-style: none;
    box-sizing: border-box;
    font-family: 'Raleway', Arial, Helvetica, Arial;
    font-weight: 300;
}

:root {
  --background: #F5F5F5;
  --header: #111;
  --text: #000;
  --header-text: #fff;
}

html, body{
    height: 100%;
    background-color: var(--background);
    color: var(--text);
}

.title-container {
    text-align: center;
    padding: 20px;
}

.title {
    font-size: 36px;
    color: var(--text); /* Blue text color */
    text-transform: uppercase;
    letter-spacing: 2px;
    margin: 0;
}

.content-container {
    max-width: 600px;
    margin: 0 auto;
    padding: 20px;
}

h3 {
    font-size: 24px;
    font-weight: 500;
    color: var(--text);
    margin: 10px;
}

/* Style the centered list */
.centered-list {
    list-style-type: none;
    padding: 0;
}

    /* Style the centered list items */
.centered-item {
    list-style-type: none;
    text-align: center;
    padding-left: 0;
    margin-bottom: 10px;
}

.centered-item img {
  transition: transform 0.3s;
  height: auto;
  max-width: 100%;
}

.centered-item img:hover {
  transform: scale(1.025);
}

.centered-item p {
  margin-top: 0;
  font-size: 16px;
  color: var(--text);
}

.centered-item p:active {
  color: var(--text);
}


li{
    list-style-type: disc;
    margin: 20px;
}

#icon {
    width: 30px;
    cursor: pointer;
}

.container {
    display: flex;
    flex-direction: row;
    align-items: center;
  }
  
.photo {
  max-width: 27%;
  min-width: 400px;
  margin-left: 25px;
  margin-top: 25px;
  margin-right: 20px;
  height: auto;
}

p {
  font-size: 1.125rem;
  line-height: 1.6;
  margin-top: 20px;
  margin-bottom: 20px;
}

.text {
  flex-basis: 60%;
  text-align: left;
  padding-left: 20px;
  font-size: 1.25rem;
}

.title {
  font-size: 2.25rem;
  font-weight: bold;
}

.container2 {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.descriptions {
  flex-basis: 50%;
}

.descriptions h2 {
  text-align: center;
}

.descriptions ul {
  list-style-type: none;
  padding: 0;
}

.descriptions li {
  margin-bottom: 1rem;
}

.form-container {
    max-width: 400px;
    margin: 0 auto; /* Center the container horizontally */
    padding: 20px;
    background-color: #f5f5f5;
    border-radius: 5px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    text-align: center; /* Center the form contents horizontally */
}

/* Default styles for the navbar */
nav {
  background: var(--header);
  height: 80px;
  width: 100%;
}

nav ul {
  float: right;
  display: flex;
  flex-direction: row;
  list-style: none;
  margin-right: 20px;
}

nav ul li {
  list-style: none;
}

.button {
  display: inline-block;
  padding: 10px 20px;
  background-color: none;
  color: var(--header-text);
  text-decoration: none;
  border: var(--header-text);
  border-radius: 4px;
  transition: background-color 0.25s ease;
  transition: scale 0.1s ease;
}

.button:hover {
  background-color: var(--header-text);
  color: var(--header);
  transition: .3s;
}

.button:active {
  transform: scale(0.96);
}

.contact-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

form {
  display: flex;
  flex-direction: column;
  font-weight: bold;
}

.form {
  display: flex;
  flex-direction: row;
  align-items: center;
  font-weight: 500;
}

/* Style the email and message input fields */
input[type="email"], input[type="message"] {
  width: 350px;
  margin: 5px;
  margin-left: 10px;
  padding: 10px;
  border: 1px solid #ccc;
  border-radius: 5px;
  font-size: 16px;
  background-color: #f7f7f7;
  color: #333;
}

input[type="email"] {
  width: 375px;
}

.logo {
  cursor: pointer;
  color: white;
  font-size: 35px;
  line-height: 80px;
  padding: 50px;
  font-weight: bold;
}

button[type="submit"] {
  padding: 10px;
  width: 50%;
  background-color: var(--text);
  color: var(--header-text);
  margin: 20px auto;
  border: none;
  border-radius: 5px;
  font-size: 1em;
  cursor: pointer;
  transition: all 0.1s ease;
}

button[type="submit"]:active {
  transform: scale(0.96);
}

@media screen and (max-width: 1380px) {
  .container {
    flex-direction: column;
  }
}

/* Media query for responsive design */
@media screen and (max-width: 1075px) {
  nav {
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    justify-content: center;
  }

  nav ul li {
    padding: 0.5em 1em;
    font-size: 1em;
    list-style-type: none;
  }

  label.logo {
    display: none;
  }
}

@media (max-width: 836px) {
  nav ul li {
    font-size: 0.75em;
    margin: 10px;
  }
}

  @media (max-width: 716px) {
    nav ul li {
      padding: 0.25em 0.5em;
      font-size: 0.5em;
      margin: 5px;
    }
}

textarea {
    resize: vertical;
}
  
footer {
  padding: 15px;
}

#photo-gallery {
  margin-left: 50px;
  margin-right: 50px;
}

/* Project Content */

.repo-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.repo {
  text-align: center;
  width: 80%;
  border: 4px solid var(--text);
  border-radius: 15px;
  padding: 10px;
  padding-bottom: 20px;
  list-style-type: none;
}

/* Default Link Styling */
.repo a {
  color: #006fee;
}

.repo a:visited {
  color: #006fee;
}

.repo:hover {
  box-shadow:
        0 3px 6px var(--text),
        0 3px 6px var(--text);
}

